very small change to fix the issue with the visual editorscrollbar

--- a/wp-content/themes/cmp/assets/styles/modules/_global.scss
+++ b/wp-content/themes/cmp/assets/styles/modules/_global.scss
@@ -251,7 +251,7 @@ form.search-form {
 
 //Added to prevent stray fixed-width elements from overflowing on mobile.
 .content {
-  overflow:hidden;
+  overflow-x:hidden;
 }
 
 .magazine-sub-page {
