--- a/wp-content/themes/cmp/assets/styles/modules/_tabs.scss
+++ b/wp-content/themes/cmp/assets/styles/modules/_tabs.scss
@@ -102,6 +102,7 @@ ul.tab-content {
 
 .tabbed-content {
   overflow: hidden;
+  width: 100% !important;
 }
 
 .tabs-list {
